kubernetes-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-with-kubernetes
  labels:
    istio-injection: enabled
